_sass/_layout.scss
@-webkit-keyframes slideInDown {
  from {
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
    visibility: visible;
  }

  to {
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

@keyframes slideInDown {
  from {
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
    visibility: visible;
  }

  to {
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

.slideInDown {
  -webkit-animation-name: slideInDown;
  animation-name: slideInDown;
}

.animated {
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.site-header {
  margin-top: 15px;
  min-height: 56px;
  // Positioning context for the mobile navigation icon
  position: relative;
}

.site-title {
    font-size: 26px;
    font-weight: 300;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;

    &, &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
      font-size: 14pt;
      line-height: $base-line-height;
      text-transform: lowercase;
      border-bottom: 1px dashed;
        // Gaps between nav items, but not on the last one
      &:not(:last-child) {
          margin-right: 15px;
      }

      &:hover {
        text-decoration: none;
        border-bottom: 1px solid;
      }
    }

    @include media-query($on-palm) {
        position: absolute;
        top: 9px;
        right: $spacing-unit / 2;
        background-color: $background-color;
        // border: 1px solid $grey-color-light;
        // border-radius: 5px;
        text-align: right;

        .menu-icon {
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .page-link {
            // display: block;
            // padding: 5px 10px;
            margin-left: 20px;
            &:not(:last-child) {
                margin-right: 0;
            }
        }
    }
}

/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
    margin-top: 45%;

    a {
      color: #111;
      border-bottom: 1px dashed #111;

      &:hover {
        text-decoration: none;
        border-bottom: 1px solid #111;
      }
    }
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.footer-menu {
  display: inline-block;
}

.contact-list {
  margin-left: 0 !important;
  display: inline-block;
  float: right;
  @include media-query($on-palm) {
    float: none;
    margin-top: 20px;
  };
}

.social-media-list {
    list-style: none;
    margin-left: 0;
    margin-top: 10px;
    li {
      display: inline-block;
    }
}

.footer-pages {
  margin-left: 0;
  li {
    display: inline-block;
  }
  li:not(:last-child):after {
      content: '•';
  }
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

.no-border {
  border: none !important;
}

/**
 * Page content
 */
.page-content {
    padding: $spacing-unit 0;
    p {
      text-align: justify;
    }
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

.post-item {
  list-style-type: none;
  border-bottom: 1px solid $grey-color-light;
  padding: 10px;
  .post-item-header {
    .post-item-date {
      font: $secondary-font-weight #{$secondary-font-size}/#{$secondary-line-height} $secondary-font-family;
    }
    .post-item-title {
      width: 80%;
      a {
        font: $base-font-weight 2rem/#{$base-line-height} $base-font-family;
        color: $text-color;
      }
      a:hover {
        text-decoration: none;
        color: lighten($text-color, 25%);
      }
    }
    span {
      display: inline-block;
    }
  }
  .post-item-excerpt {
    p {
      text-align: justify;
    }
  }
}

